--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,4 +1,4 @@
 name: Minecart Mania Chest Control
 main: com.afforess.minecartmaniachestcontrol.MinecartManiaChestControl
-version: 1.04b
+version: 1.05
 author: Afforess
