--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -2,3 +2,4 @@ name: Minecart Mania Chest Control
 main: com.afforess.minecartmaniachestcontrol.MinecartManiaChestControl
 version: 1.06
 author: Afforess
+depend: [Minecart Mania Core]
