Refactored several util methods. Restored '!' functionality Fixed funny business with Furnaces Added Item Range functionality

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,5 +1,5 @@
 name: MinecartManiaChestControl
 main: com.afforess.minecartmaniachestcontrol.MinecartManiaChestControl
-version: 1.09a
+version: 1.09c
 author: Afforess
 depend: [MinecartManiaCore]
