Item Collection/Depositing Works (except for Direction Conditions on Signs... I may remove those)

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,5 +1,5 @@
 name: MinecartManiaChestControl
 main: com.afforess.minecartmaniachestcontrol.MinecartManiaChestControl
-version: 1.09c
+version: 1.09e
 author: Afforess
 depend: [MinecartManiaCore]
