Converted over to MMS instead off bukkit signs
Signed-off-by: Afforess <afforess@gmail.com>

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,5 +1,5 @@
 name: MinecartManiaChestControl
 main: com.afforess.minecartmaniachestcontrol.MinecartManiaChestControl
-version: 1.09e
+version: 1.10_beta1
 author: Afforess
 depend: [MinecartManiaCore]
